--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,12 +150,17 @@ font-size: 20px;
 }
 
 #slider{
+   
+    /* background: url("/assets/img/slider1/1200px-SaViCoDongChinh.jpg")top center/cover no-repeat ; */
+  
+}
+#slider>img{
+    padding: 0;
     position: relative;
     margin-top: 46px;
-    padding-top: 50%;
-    background: url("/assets/img/slider1/1200px-SaViCoDongChinh.jpg")top center/cover no-repeat ;
+    width: 100%;
+    background: top center/cover no-repeat;
     background-size: contain ;
-
 }
 #slider .text-content{
     position: absolute;
